# DocxSpec

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  README.zh-CN.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml  release.yml
Demo/: README.md  demo1_paragraph.py  demo2_container_paragraph.py  demo3_container_image_caption.py  demo4_container_table_caption.py  demo5_container_table_image_caption.py  demo6_header_footer.py  demo7_styles_in_container.py  demo8_all_in_one.py  template.docx
Demo/output/: demo1_paragraph_output.docx  demo2_container_paragraph_output.docx  demo3_container_image_caption_output.docx  demo4_container_table_caption_output.docx  demo5_container_table_image_caption_output.docx  demo6_header_footer_output.docx  demo7_styles_in_container_output.docx  demo8_all_in_one_output.docx
examples/: demo_generate.py  generate_tutorial_report.py
examples/examples/: output.docx  template.docx
output/: demo_output.docx  output.docx  sample_test_output.docx  tutorial_report.docx
src/docxspec/: __init__.py  demo.py  word_api.py  word_styles.py
src/easy_doc/: __init__.py  demo.py  word_api.py
src/easy_docx/: __init__.py  demo.py
src/output/: demo_output.docx
tests/: demo.py  demo_output.docx  test_smoke.py  test_word_api.py
tests/templates/: default_template.docx
